アニメーションを追加

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link rel="stylesheet" href="./assets/styles/reset.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
-    <h1>DEMO2</h1>
+    <div class="stage">
+        <div class="ball"></div>
+    </div>
+
     
+    <h3>玉転がし</h3>
+    <div class="stage3">
+        <div class="border"></div>
+        <div class="roof01"></div>
+        <div class="roof02"></div>
+        <div class="ball3"></div>
+    </div>
+
 </body>
 </html>
